# ge

./: .env.example  .gitignore  CLAUDE.md  Makefile  project_plan.md  pyproject.toml
.streamlit/: config.toml
configs/: dashboard_config.yaml  data_config.yaml  feature_config.yaml  model_config.yaml
notebooks/: 01_eda.ipynb  04_results_analysis.ipynb
scripts/: download_data.py  prepare_features.py  run_all_experiments.py  run_anomaly_detection.py  run_pipeline.py  run_training.py
src/analysis/: __init__.py  anomaly_analysis.py  attention_viz.py  market_state.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  sidebar.py
src/dashboard/pages/: anomaly.py  comparison.py  prediction.py  realtime.py
src/data/: __init__.py  dataset.py  feature_engineer.py  fetcher.py  preprocessor.py  websocket_client.py  yfinance_fetcher.py
src/models/: __init__.py  anomaly_autoencoder.py  arima_model.py  base_model.py  gru_model.py  lstm_model.py  registry.py  tft_model.py  transformer_model.py  xgboost_model.py
src/training/: __init__.py  evaluator.py  experiment.py  trainer.py  walk_forward.py
src/utils/: __init__.py  config.py  constants.py  io.py  logger.py
